--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
     "eslint": "8.4.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.5.2"
   }
 }
